<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Minha Colecao 2022</string>
    <string name="nav_header_subtitle">christian.coliveira@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="vazio">CADASTRAR MOEDAS NACIONAIS</string>
    <string name="appname">Minha Colecao de Notas e Moedas</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo">Numismatica</string>
    <string name="nomeapk">Minha Coleção</string>
    <string name="deslogar">Deslogar</string>
    <string name="carregando">Carregando Aplicação</string>

    <string name="Moedas_Nacionais">Moedas Nacionais</string>
    <string name="Moedas_Estrangeiras">Moedas Estrangeiras</string>
    <string name="Notas">Notas</string>
    <string name="Colecao">Coleção</string>
    <string name="Ajustes">Ajustes</string>
    <string name="importar">Importar Dados da Memoria</string>
    <string name="exportar">Exportar Banco de Dados</string>
    <string name="email">Enviar por email</string>
    <string name="apagar">Apagar Bando de Dados</string>
    <string name="apaga">DELETAR</string>
    <string name="fechar">FECHAR</string>
    <string name="numeracao">Numeracao Mundial</string>
    <string name="voltar">Voltar</string>

    <string name="identificacaomoedasdeeuro">Identificação Moedas de Euro</string>
    <string name="LocaisdeCunhagemEuro">Locais de Cunhagem Euro</string>
    <string name="DatarmoedasJaponesas">Datar moedas Japonesas</string>

    <string name="ano">ANO</string>
    <string name="pais">PAIS</string>
    <string name="valor">VALOR</string>
    <string name="moeda">MOEDA</string>
    <string name="material">MATERIAL</string>
    <string name="venda">$ VENDA</string>
    <string name="diametro">TAMANHO</string>
    <string name="cadastro">DATA</string>
    <string name="id">ID</string>
    <string name="krause">KRAUSE</string>
    <string name="qualidade">QUALIDADE</string>
    <string name="anverso">ANVERSO</string>
    <string name="reverso">REVERSO</string>
    <string name="detalhe">DETALHE</string>
    <string name="separar">" | "</string>
    <string name="tipo">TIPO</string>
    <string name="resumo">RESUMO</string>
    <string name="espaco">" "</string>


    <string name="action_example">Example action</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="imagem">Imagem</string>
    <string name="separar_krause">| #</string>
    <string name="lista_pais_pais">Selecione o país para ver as moedas:</string>

    <string name="pesquisa">Pesquisa</string>
    <string name="e_mail">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>

    <string name="cadastrar">Novo Cadastro</string>
    <string name="moedas_brasileira">Moedas Brasileiras</string>
    <string name="relatorios">Ultimos Adicionados</string>
    <string name="colecao_completa">Colecao Completa</string>
    <string name="notas_brasileiras">Notas Brasileiras</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="opcoes">Opções</string>
    <string name="exportar_dados">Exportar dados</string>

    <string name="tab">\u0009</string>
    <string name="identificar_moedas_de_euro">Identificar Moedas de Euro</string>
    <string name="simbolos_utilizados_por_paises_em_moedas">Simbolos utilizados por paises em moedas</string>


    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_title">1</string>
</resources>
