<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/tvAno"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:text="@string/ano"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separar_krause"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvKrause"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separar"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvPais"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/pais"
        android:textStyle="bold"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separar"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvValor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:textStyle="bold"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separar"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvMoeda"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/moeda"
        android:textStyle="bold"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separar"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvTipo"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:textStyle="bold"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/TextV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separar"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvMaterial"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/material"
        android:textStyle="bold"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separar"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvcadastro"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textStyle="bold"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="14sp"
        android:visibility="invisible" />

</LinearLayout>